update: fixed overflow on small screen device

--- a/src/css/scss/_header.scss
+++ b/src/css/scss/_header.scss
@@ -51,6 +51,10 @@
       margin-bottom: 0.5rem;
       text-transform: uppercase;
       letter-spacing: 0.1rem;
+
+      @include breakpoint-down("small") {
+        font-size: 1.2rem;
+      }
     }
 
     .status-area {
